src/index.css
/*
=============== 
Variables
===============
*/

:root {
  --color-primary: #645cff;
  --color-primary-dark: #282566;
  --color-primary-light: #a29dff;
  --color-grey-1: #102a42;
  --color-grey-5: #617d98;
  --color-grey-10: #f1f5f8;
  --color-white: #fff;
  --color-red-dark: hsl(360, 67%, 44%);
  --color-red-light: hsl(360, 71%, 66%);
  --color-green-medium: rgb(80, 221, 80);
  --transition: all 0.3s linear;
  --spacing: 0.25rem;
  --radius: 0.25rem;
  /* --large-screen-width: 1170px; */
  --small-screen-width: 90vw;
  /* --fixed-width: 50rem; */
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: var(--color-grey-10);
  color: var(--color-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a {
  text-decoration: none;
}

.title h2 {
  text-align: center;
}

.underline {
  background-color: rgb(206, 153, 56);
  height: 5px;
  width: 50px;
  text-align: center;
  margin: 0 auto;
  border-radius: 10px;
}

.btn {
  text-transform: uppercase;
  background-color: rgb(228, 193, 128);
  color: var(--color-white);
  padding: 0.375rem 0.75rem;
  letter-spacing: var(--spacing);
  display: inline-block;
  font-weight: 700;
  transition: var(--transition);
  font-size: 0.875rem;
  border: none;
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  margin: 0 20px;
  border-radius: 5px;
}

.btn:hover {
  color: var(--color-primary);
  transition: color 0.7s ease;
}

.btn-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0 auto;
  padding: 30px 0;
}

.btn--country,
.btn--tab,
.btn--checklist {
  background: var(--color-primary-light);
}

.btn--tab,
.btn--category {
  background-color: var(--color-white);
  border: 1px solid var(--color-primary-light);
  color: var(--color-primary);
}

.filter-btn {
  margin-bottom: 20px;
}

.btn--clear {
  color: var(--color-red-light);
  text-transform: lowercase;
  background-color: var(--color-white);
}

.btn--tab.active-btn {
  background-color: var(--color-primary-light);
  ;
  color: var(--color-white);
}

.btn--country:hover,
.btn--tab:hover {
  opacity: 0.7;
  transition: opacity 0.7s ease;
}

h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 0.875rem;
  margin: 0;
}

.wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
  min-height: 100vh;
}

.container {
  max-width: 1170px;
  width: 100%;
  margin: 0 auto;
}

.content {
  flex: 1 0 auto;
}

/***********************************************/
/****************** NAVBAR**********************/
/***********************************************/
.nav-header {
  display: flex;
  align-items: center;
  padding: 1rem 0;
  padding: 50px 0;
  justify-content: space-between;
}

.logo {
  padding: 1rem;
  cursor: pointer;
  font-family: "Montserrat", sans-serif;
  margin-right: 20px;
}

.logo h1 {
  margin: 0;
}

.logo a {
  margin: 0;
  color: var(--color-primary);
}

.links {
  padding-left: 0;
  margin: 0;
  list-style: none;
  display: flex;
  font-weight: 700;
  font-size: 0.875rem;
  color: var(--color-primary-light);
  text-transform: uppercase;
  flex-wrap: wrap;
}

.links a {
  margin-right: 20px;
  color: var(--color-primary-light);
  margin: 10px;
}

.links li a {
  color: var(--color-primary);
  cursor: pointer;
}

/***********************************************/
/****************** PLACES**********************/
/***********************************************/

.places {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 20px;
}

.place-item {
  width: 50%;
  width: 100%;
  overflow: hidden;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  position: relative;
  background-color: var(--color-grey-10);
}

.place-item img:hover {
  transform: scale(1.1);
  transition: transform 1s;
  height: 400px;
}

img, .place-img {
  height: 400px;
  width: 100%;
  display: block;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  z-index: 0;
  position: relative;
  object-fit: cover;
}

.read-btn {
  border: none;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 10px 30px;
  color: var(--color-primary);
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
}

.read-btn:hover {
  opacity: 0.7;
  transition: opacity 0.7s ease;
}

.place-text {
  margin-bottom: 1.25rem;
}

.place-info {
  background-color: var(--color-grey-10);
  padding: 20px 0;
  position: relative;
  z-index: 1;
}

/***********************************************/
/****************** SLIDER**********************/
/***********************************************/

.slider-img {
  width: 100%;
  position: relative;
}

.slider-img .btn-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 0 30px;
  width: 90%;
  display: flex;
  justify-content: space-between;
}

.slider-prev,
.slider-next {
  background-color: var(--color-white);
  padding: 0;
  border: none;
  border-radius: 50px;
  cursor: pointer;
  width: 30px;
  height: 30px;
}

.slider-prev svg,
.slider-next svg {
  padding: 5px;
  color: var(--color-primary);
  font-size: 0.875rem;
}

/***********************************************/
/****************** TABS************************/
/***********************************************/

.tabs {
  /* padding: 50px 0; */
}

.tab {
  display: flex;
}

.tab .btn-container {
  display: flex;
  flex-direction: column;
  max-width: unset;
  justify-content: flex-start;
  min-width: 300px;
}

.tab .btn-container button {
  margin-bottom: 20px;
  width: 80%;
}

.country-info h3 {
  text-transform: none;
}

/***********************************************/
/****************** ACCORDION*******************/
/***********************************************/
.accordion-list {
  padding: 50px 0;
  width: 60%;
  margin: 0 auto;
}

.resource {
  margin-bottom: 30px;
  background-color: var(--color-white);
  border: 1px solid var(--color-primary-light);
  border-radius: 5px;
  padding: 0 20px;
}

.resource header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  margin: 0 auto;
}

.resource .btn {
  background-color: var(--color-white);
  padding: 0;
  border: none;
  border-radius: 50px;
  cursor: pointer;
  width: 30px;
  height: 30px;
}

.resource .btn svg {
  padding: 5px;
  color: var(--color-primary);
  font-size: 0.875rem;
}

/***********************************************/
/****************** CHECKLIST*******************/
/***********************************************/

.checklist {
  text-align: center;
  background-color: var(--color-white);
  width: 600px;
  padding-top: 20px;
  padding-bottom: 20px;
  border-radius: 5px;
  box-shadow: 0 1px 3px rgb(0 0 0 / 20%);
  margin: 0 auto;
  margin-top: 50px;
}

.checklist-form {
  height: 100px;
}

.checklist h3 {
  margin: 0;
  margin-bottom: 20px;
}

.form {
  padding: 0 400px;
  margin-bottom: 20px;
  padding: 0;
}

.form-control {
  position: relative;
  width: 400px;
  margin: 0 auto;
}

.checklist input {
  width: 300px;
  height: 26px;
  padding: 0;
  border-radius: 5px;
  border: 1px solid var(--color-primary-light);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  position: absolute;
  left: 0;
  padding: 0 20px;
  outline: none;
}

.checklist input:focus {
  border: 1px solid var(--color-primary);
}

.checklist-item {
  display: flex;
  width: 400px;
  margin: 0 auto;
  justify-content: space-between;
  border-radius: 5px;
  cursor: pointer;
  padding: 0 20px;
  transition: background-color 0.7s ease;
}

.checklist-item:hover {
  background-color: var(--color-grey-10);
}

.checklist-item .title {
  font-size: 1rem;
  font-weight: 600;
  margin: 0.5rem 0;
}

.checklist-item .btn-container {
  margin: 0;
  padding: 0;
}

.checklist .edit-btn,
.checklist .delete-btn {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.checklist .edit-btn svg {
  color: var(--color-green-medium);
}

.checklist .clear-button {
  margin-top: 20px;
}

.checklist .delete-btn svg {
  color: var(--color-red-dark);
}

.checklist .submit-btn {
  width: 100px;
  position: absolute;
  right: 0;
  margin-left: 0;
  margin: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

/***********************************************/
/********************* SOCIAL ******************/
/***********************************************/

.social {
  flex: 0 0 auto;
  padding: 50px 0;
}

.social-icons {
  padding-left: 0;
  margin: 0;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.social-icons li {
  margin: 20px;
}

.social-icons svg {
  width: 36px;
  height: 35px;
  color: var(--color-primary-light);
}

/***********************************************/
/****************** media queries **************/
/***********************************************/
@media (max-width: 1200px) {
  .container {
    /* padding: 0 24px; */
  }
}

@media (max-width: 768px) {
  .container {
    /* padding: 0 16px; */
  }

  h1 {
    font-size: 2.5rem;
  }

  h2 {
    font-size: 1.5rem;
  }

  h3 {
    font-size: 1rem;
  }

  .nav-header {
    padding: 25px 0;
    flex-wrap: wrap;
  }

  .links {
    flex-direction: column;
  }

  .links-container {
    width: 100%;
  }

  .links a:hover {
    padding-left: 20px;
    transition: all 0.5s ease;
  }

  .logo {
    padding: 10px;
    font-size: 0.5rem;
    width: 100%;
  }

  .nav,
  .tabs {
    width: 100%;
  }

  .accordion-list {
    width: 100%;
  }

  .tab .btn-container {
    min-width: 30%;
    margin-right: 20px;
  }

  img, .place-img {
    height: 200px;
  }

  .place-item img:hover {
    height: 200px;
  }

  .checklist {
    width: 100%;
  }
}

@media (max-width: 320px) {
  .places {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
  }
}

